@@ -1,0 +1,2 @@
+The AttachWarner verifies that you have attached something to your email
+if you mentioned attachment in the email's body.
