@@ -1,0 +1,2 @@
+This plug-in removes attachments from mail, permanently.  It doesn't
+save them, it *removes* them.
