@@ -1,0 +1,3 @@
+@comment $NetBSD$
+lib/claws-mail/plugins/att_remover.la
+@dirrm lib/claws-mail/plugins
