@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (att_remover-1.0.6.tar.gz) = 881e782e3b2870253bd8194a7aed66d2e6c37425
+RMD160 (att_remover-1.0.6.tar.gz) = cbd8738b447db7178f82fc9b60314142bfe808c1
+Size (att_remover-1.0.6.tar.gz) = 322566 bytes
