@@ -1,0 +1,3 @@
+@comment $NetBSD$
+lib/claws-mail/plugins/cachesaver.la
+@dirrm lib/claws-mail/plugins
