@@ -1,0 +1,1 @@
+This plugin permits mailboxes to be in mbox format.
