@@ -1,0 +1,14 @@
+The RSSyl plugin is an RSS feed aggregator for Claws Mail. It has the
+following features:
+
+    * Handling of RSS 1.0, RSS 2.0, and Atom feeds
+    * Fetching and threaded display of comment feeds
+    * Customisable refresh interval for each feed
+    * Customisable number of feed items to keep for each feed
+
+Navigating in your feeds and posts is done in the same way as you would
+for emails, which makes feed-reading really fast and enjoyable if Claws
+Mail's shortcuts are hardwired into your fingers.
+Also, the RSSyl plugin unleashes its full potential when used with an HTML
+viewer plugin like Dillo or Gtkhtml2Viewer, as this allows fetching a
+post's images and font styles.
