@@ -1,0 +1,28 @@
+# $NetBSD$
+#
+
+DISTNAME=rssyl-0.14
+PKGNAME=claws-mail-rssyl-0.14
+CATEGORIES=mail
+MASTER_SITES=	http://claws-mail.org/downloads/plugins/
+
+MAINTAINER=	smb@NetBSD.org
+COMMENT=	Read RSS 1.0, 2.0 and Atom feeds in Claws-Mail
+
+DEPENDS+=	claws-mail>=2.10.0:../../mail/claws-mail
+
+PLIST_SRC+=	PLIST
+
+.include "../../mk/bsd.prefs.mk"
+
+GNU_CONFIGURE=	yes
+USE_LIBTOOL=	yes
+USE_TOOLS+=	pkg-config
+USE_LANGUAGES+=	c
+
+.include "../../mail/claws-mail/buildlink3.mk"
+.include "../../devel/glib2/buildlink3.mk"
+.include "../../x11/gtk2/buildlink3.mk"
+.include "../../textproc/libxml2/buildlink3.mk"
+.include "../../www/curl/buildlink3.mk"
+.include "../../mk/bsd.pkg.mk"
