@@ -1,0 +1,5 @@
+$NetBSD$
+
+SHA1 (rssyl-0.14.tar.gz) = 710f58e10a1bb195980d407b2930ceb2ebc35e91
+RMD160 (rssyl-0.14.tar.gz) = b03c090225c0a1d23bd8cb37cfe87fb887e787f9
+Size (rssyl-0.14.tar.gz) = 464197 bytes
