@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1711 2007/08/05 22:40:35 joerg Exp $
+$NetBSD: CHANGES-2007,v 1.1712 2007/08/05 23:46:29 joerg Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -3149,3 +3149,9 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated x11/modular-xorg-server to 1.3.0.0 [joerg 2007-08-05]
 	Updated x11/xf86-input-mouse to 1.2.2 [joerg 2007-08-05]
 	Updated x11/xf86-input-keyboard to 1.2.0 [joerg 2007-08-05]
+	Added mail/claws-mail-attachwarner version 0.2.7 [smb 2007-08-05]
+	Added mail/claws-mail-attremover version 1.0.6 [smb 2007-08-05]
+	Added mail/claws-mail-cachesaver version 0.10.5 [smb 2007-08-05]
+	Added mail/claws-mail-fetchinfo version 0.4.19 [smb 2007-08-05]
+	Added mail/claws-mail-mailmbox version 1.13.1 [smb 2007-08-05]
+	Added mail/claws-mail-rssyl version 0.14 [smb 2007-08-05]
